# airflow-examples

./: .gitignore  pyproject.toml
dag_docker_compose/: README.md
dag_docker_compose/dags/: download_rocket_launches.py
dag_docker_compose/logs/scheduler/: latest
debugging_dags/: README.md  dag_context.py
example01/: __init__.py  pyproject.toml
