[tool.poetry]
name = "airflow-examples"
version = "0.1.0"
description = ""
authors = ["HeberTU <heber.trj.urt@gmail.com>"]
readme = "README.md"
packages = [{include = "airflow_examples"}]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
